Adding downloaded Boost SML

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LIB_OBJECT_NAME "${LOCAL_CMAKE_PROJECT_NAME}_object")
 add_library(${LIB_OBJECT_NAME} OBJECT ${SOURCES} ${EXTRA_SOURCES})
 
 # actual shared and static libraries built from the same object files
+include_directories(${LIB_STATIC_NAME} ../include)
 add_library(${LIB_STATIC_NAME} STATIC $<TARGET_OBJECTS:${LIB_OBJECT_NAME}>)
 target_link_libraries(${LIB_STATIC_NAME})
 #add_library(${LIB_SHARED_NAME} SHARED $<TARGET_OBJECTS:${LIB_OBJECT_NAME}>)
