--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,9 +5,10 @@ if(Boost_FOUND)
 
  set(LIB_PATH "${CMAKE_BINARY_DIR}/src")
  file(GLOB SOURCES main.cpp)
+ file(GLOB EXTRA_SOURCES ../include/*.h ../include/boost/*.h) # making happy Qt-Creator project tab
  link_directories(${LIB_PATH} ${Boost_LIBRARY_DIRS})
- include_directories(${Boost_INCLUDE_DIRS})
- add_executable(${TEST_NAME} ${SOURCES})
+ include_directories(../include ${Boost_INCLUDE_DIRS})
+ add_executable(${TEST_NAME} ${SOURCES} ${EXTRA_SOURCES})
  add_dependencies(${TEST_NAME} ${LIB_STATIC_NAME})
  target_link_libraries(${TEST_NAME} ${LIB_STATIC_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}) 
  add_test(UnitTest ${TEST_NAME})
